# websearch-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  INSTALLATION.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  example_usage.py  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  USING_TEMPLATE.md
scripts/: __init__.py  __main__.py  setup.sh
src/template_project/: __init__.py  main.py
src/websearch_ai/: README.md  __init__.py  cli.py  requirements.txt
src/websearch_ai/clients/: __init__.py  http.py  llm.py  search.py
src/websearch_ai/config/: __init__.py  config.example.yaml  config.yaml  settings.py
src/websearch_ai/core/: __init__.py  models.py  pipeline.py
src/websearch_ai/docs/: CONFIG.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  STRUCTURE.md  TROUBLESHOOTING.md
src/websearch_ai/examples/: __init__.py  usage_examples.py
src/websearch_ai/filters/: __init__.py  url_filter.py
src/websearch_ai/managers/: __init__.py  cache.py  prompts.py  robots.py
src/websearch_ai/prompts/: __init__.py  prompts.yaml
src/websearch_ai/scripts/: README.md  __init__.py  benchmark.py  clear_cache.py  export_results.py  run_tests.sh  validate_config.py
src/websearch_ai/tests/: README.md  __init__.py  conftest.py  requirements.txt  test_cache_manager.py  test_integration.py  test_models.py  test_prompt_manager.py  test_settings.py  test_url_filter.py
tests/: test_main.py
