[project]
name = "template_project"
version = "0.1.0"
description = "A modern Python project template"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name="Davide Palleschi", email="davide@deepplants.com" }
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [    
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.6",  # Minimum version with stable formatter support
    "pre-commit>=3.0",
   ]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68", "wheel", "uv>=0.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["template_project", "scripts"]

[tool.setuptools.package-dir]
"" = "src"
"scripts" = "scripts"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=template_project --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
# Ruff formatter settings (replaces Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Ruff linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[project.scripts]
test = "scripts:test"
test-cov = "scripts:test_cov"
lint = "scripts:lint"
format = "scripts:format_code"
clean = "scripts:clean"
