[project]
name = "websearch-ai"
version = "2.0.0"
description = "Modular and configurable web search with LLM summarization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name="Davide Palleschi", email="davide@deepplants.com" }
]
keywords = ["web-search", "llm", "summarization", "ai", "openai", "duckduckgo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "pyyaml>=6.0",
    "ddgs>=0.1.0",
    "trafilatura>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/deepplants/websearch-ai"
Documentation = "https://github.com/deepplants/websearch-ai/blob/main/README.md"
Repository = "https://github.com/deepplants/websearch-ai"
Issues = "https://github.com/deepplants/websearch-ai/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.6",
    "pre-commit>=3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel", "uv>=0.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["websearch_ai*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
websearch_ai = [
    "config/*.yaml",
    "prompts/*.yaml",
    "docs/*.md",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=websearch_ai --cov-report=term-missing --cov-report=html"
testpaths = ["src/websearch_ai/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
# Ruff formatter settings (replaces Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Ruff linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[project.scripts]
websearch-ai = "websearch_ai.cli:main"
